update giao diện

--- a/src/admin/dashboard.html
+++ b/src/admin/dashboard.html
@@ -42,7 +42,7 @@
                 <a href="role-management.html" class="px-3 py-4 text-gray-500 hover:text-blue-600 font-medium">
                     <i class="fas fa-user-shield mr-2"></i>Phân quyền hệ thống
                 </a>
-                <a href="#" class="px-3 py-4 text-gray-500 hover:text-blue-600 font-medium">
+                <a href="document-management.html" class="px-3 py-4 text-gray-500 hover:text-blue-600 font-medium">
                     <i class="fas fa-book mr-2"></i>Quản lý tài liệu
                 </a>
                 <a href="#" class="px-3 py-4 text-gray-500 hover:text-blue-600 font-medium">
@@ -124,7 +124,7 @@
             <div class="bg-white p-6 rounded-lg shadow-md">
                 <div class="flex justify-between items-center mb-4">
                     <h2 class="text-lg font-semibold">Quản lý nội dung</h2>
-                    <a href="#" class="text-blue-500 hover:text-blue-700 text-sm">Xem tất cả</a>
+                    <a href="document-management.html" class="text-blue-500 hover:text-blue-700 text-sm">Xem tất cả</a>
                 </div>
                 <div class="mb-4">
                     <input type="text" id="contentSearchInput" placeholder="Tìm kiếm tài liệu..."
