--- a/src/admin/role-management.html
+++ b/src/admin/role-management.html
@@ -54,7 +54,7 @@
         <div id="statusMessage" class="mb-4 hidden"></div>
 
         <!-- Role Permissions Management -->
-        <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
+        <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-2 lg:grid-cols-4 gap-6">
             <!-- Admin Role -->
             <div class="bg-white rounded-lg shadow-md p-6 border-l-4 border-red-500">
                 <h2 class="text-lg font-semibold mb-4 flex items-center">
@@ -69,14 +69,6 @@
                         <span class="text-green-500"><i class="fas fa-check"></i></span>
                     </div>
                     <div class="flex items-center justify-between">
-                        <span class="text-sm font-medium">Xác thực tài liệu</span>
-                        <span class="text-green-500"><i class="fas fa-check"></i></span>
-                    </div>
-                    <div class="flex items-center justify-between">
-                        <span class="text-sm font-medium">Xóa tài liệu</span>
-                        <span class="text-green-500"><i class="fas fa-check"></i></span>
-                    </div>
-                    <div class="flex items-center justify-between">
                         <span class="text-sm font-medium">Quản lý phân quyền</span>
                         <span class="text-green-500"><i class="fas fa-check"></i></span>
                     </div>
@@ -86,6 +78,62 @@
                     * Quyền quản trị không thể chỉnh sửa
                 </div>
             </div>
+            <!-- Head Role -->
+            <div class="bg-white rounded-lg shadow-md p-6 border-l-4 border-purple-500">
+                <h2 class="text-lg font-semibold mb-4 flex items-center">
+                    <i class="fas fa-user-check mr-2 text-purple-500"></i>Trưởng khoa
+                </h2>
+                <p class="text-sm text-gray-600 mb-4">Quyền tạo khóa học và quản lý tài liệu khóa học</p>
+            
+                <div class="space-y-3">
+                    <div class="flex items-center justify-between">
+                        <span class="text-sm font-medium">Tải lên tài liệu</span>
+                        <label class="relative inline-flex items-center cursor-pointer">
+                            <input type="checkbox" id="HeadUpload" class="sr-only peer" checked>
+                            <div class="w-11 h-6 bg-gray-300 rounded-full peer-checked:bg-purple-600 transition-all">
+                                <div class="absolute top-[2px] left-[2px] w-5 h-5 bg-white rounded-full border border-gray-300 
+                                transition-all peer-checked:translate-x-full peer-checked:border-white"></div>
+                            </div>
+                        </label>
+                    </div>
+                    <div class="flex items-center justify-between">
+                        <span class="text-sm font-medium">Xem tài liệu</span>
+                        <label class="relative inline-flex items-center cursor-pointer">
+                            <input type="checkbox" id="HeadView" class="sr-only peer" checked>
+                            <div class="w-11 h-6 bg-gray-300 rounded-full peer-checked:bg-purple-600 transition-all">
+                                <div class="absolute top-[2px] left-[2px] w-5 h-5 bg-white rounded-full border border-gray-300 
+                                transition-all peer-checked:translate-x-full peer-checked:border-white"></div>
+                            </div>
+                        </label>
+                    </div>
+                    <div class="flex items-center justify-between">
+                        <span class="text-sm font-medium">Xóa tài liệu</span>
+                        <label class="relative inline-flex items-center cursor-pointer">
+                            <input type="checkbox" id="HeadDelete" class="sr-only peer">
+                            <div class="w-11 h-6 bg-gray-300 rounded-full peer-checked:bg-purple-600 transition-all">
+                                <div class="absolute top-[2px] left-[2px] w-5 h-5 bg-white rounded-full border border-gray-300 
+                                transition-all peer-checked:translate-x-full peer-checked:border-white"></div>
+                            </div>
+                        </label>
+                    </div>
+                    <div class="flex items-center justify-between">
+                        <span class="text-sm font-medium">Xác nhận tài liệu</span>
+                        <label class="relative inline-flex items-center cursor-pointer">
+                            <input type="checkbox" id="HeadConfirmCourse" class="sr-only peer" checked>
+                            <div class="w-11 h-6 bg-gray-300 rounded-full peer-checked:bg-purple-600 transition-all">
+                                <div class="absolute top-[2px] left-[2px] w-5 h-5 bg-white rounded-full border border-gray-300 
+                                transition-all peer-checked:translate-x-full peer-checked:border-white"></div>
+                            </div>
+                        </label>
+                    </div>
+                </div>
+                <button id="saveHeadPermissions"
+                    class="mt-4 bg-purple-500 hover:bg-purple-600 text-white py-2 px-4 rounded text-sm">
+                    <i class="fas fa-save mr-2"></i>Lưu thay đổi
+                </button>
+            </div>
+            
+
 
             <!-- Teacher Role -->
             <div class="bg-white rounded-lg shadow-md p-6 border-l-4 border-blue-500">
@@ -114,7 +162,7 @@
                         </label>
                     </div>
                     <div class="flex items-center justify-between">
-                        <span class="text-sm font-medium">Quản lý khóa học</span>
+                        <span class="text-sm font-medium">Quản lý môn học</span>
                         <label class="relative inline-flex items-center cursor-pointer">
                             <input type="checkbox" id="teacherManageCourse" class="sr-only peer" checked>
                             <div
@@ -175,9 +223,9 @@
                         </label>
                     </div>
                     <div class="flex items-center justify-between">
-                        <span class="text-sm font-medium">Tải lên tài liệu</span>
+                        <span class="text-sm font-medium">Tải về tài liệu</span>
                         <label class="relative inline-flex items-center cursor-pointer">
-                            <input type="checkbox" id="studentUpload" class="sr-only peer">
+                            <input type="checkbox" id="studentdownload" class="sr-only peer">
                             <div
                                 class="w-11 h-6 bg-gray-200 peer-focus:outline-none rounded-full peer peer-checked:after:translate-x-full peer-checked:after:border-white after:content-[''] after:absolute after:top-[2px] after:left-[2px] after:bg-white after:border-gray-300 after:border after:rounded-full after:h-5 after:w-5 after:transition-all peer-checked:bg-blue-600">
                             </div>
@@ -202,6 +250,7 @@
                         <tr>
                             <th class="py-2 px-4 border-b text-left">Tính năng</th>
                             <th class="py-2 px-4 border-b text-center">Quản trị viên</th>
+                            <th class="py-2 px-4 border-b text-center">Trưởng Khoa</th>
                             <th class="py-2 px-4 border-b text-center">Giảng viên</th>
                             <th class="py-2 px-4 border-b text-center">Học viên</th>
                         </tr>
@@ -209,6 +258,8 @@
                     <tbody>
                         <tr>
                             <td class="py-2 px-4 border-b">Tải lên tài liệu</td>
+                            <td class="py-2 px-4 border-b text-center"><span class="text-red-500"><i
+                                        class="fas fa-times"></i></span></td>
                             <td class="py-2 px-4 border-b text-center"><span class="text-green-500"><i
                                         class="fas fa-check"></i></span></td>
                             <td class="py-2 px-4 border-b text-center" id="tableTeacherUpload"><span
@@ -218,6 +269,8 @@
                         </tr>
                         <tr>
                             <td class="py-2 px-4 border-b">Xem tài liệu</td>
+                            <td class="py-2 px-4 border-b text-center"><span class="text-red-500"><i
+                                        class="fas fa-times"></i></span></td>
                             <td class="py-2 px-4 border-b text-center"><span class="text-green-500"><i
                                         class="fas fa-check"></i></span></td>
                             <td class="py-2 px-4 border-b text-center" id="tableTeacherView"><span
@@ -227,17 +280,21 @@
                         </tr>
                         <tr>
                             <td class="py-2 px-4 border-b">Xóa tài liệu</td>
+                            <td class="py-2 px-4 border-b text-center"><span class="text-red-500"><i
+                                        class="fas fa-times"></i></span></td>
                             <td class="py-2 px-4 border-b text-center"><span class="text-green-500"><i
                                         class="fas fa-check"></i></span></td>
                             <td class="py-2 px-4 border-b text-center" id="tableTeacherDelete"><span
-                                    class="text-red-500"><i class="fas fa-times"></i></span></td>
+                                    class="text-green-500"><i class="fas fa-check"></i></span></td>
                             <td class="py-2 px-4 border-b text-center"><span class="text-red-500"><i
                                         class="fas fa-times"></i></span></td>
                         </tr>
                         <tr>
                             <td class="py-2 px-4 border-b">Xác thực tài liệu</td>
+                            <td class="py-2 px-4 border-b text-center"><span class="text-red-500"><i
+                                        class="fas fa-times"></i></span></td>
                             <td class="py-2 px-4 border-b text-center"><span class="text-green-500"><i
-                                        class="fas fa-check"></i></span></td>
+                                        class="fas fa-check"></i></span></td>      
                             <td class="py-2 px-4 border-b text-center"><span class="text-red-500"><i
                                         class="fas fa-times"></i></span></td>
                             <td class="py-2 px-4 border-b text-center"><span class="text-red-500"><i
@@ -245,6 +302,8 @@
                         </tr>
                         <tr>
                             <td class="py-2 px-4 border-b">Đánh giá tài liệu</td>
+                            <td class="py-2 px-4 border-b text-center"><span class="text-red-500"><i
+                                        class="fas fa-times"></i></span></td>
                             <td class="py-2 px-4 border-b text-center"><span class="text-green-500"><i
                                         class="fas fa-check"></i></span></td>
                             <td class="py-2 px-4 border-b text-center"><span class="text-green-500"><i
@@ -253,7 +312,9 @@
                                     class="text-green-500"><i class="fas fa-check"></i></span></td>
                         </tr>
                         <tr>
-                            <td class="py-2 px-4 border-b">Quản lý khóa học</td>
+                            <td class="py-2 px-4 border-b">Quản lý môn học</td>
+                            <td class="py-2 px-4 border-b text-center"><span class="text-red-500"><i
+                                        class="fas fa-times"></i></span></td>
                             <td class="py-2 px-4 border-b text-center"><span class="text-green-500"><i
                                         class="fas fa-check"></i></span></td>
                             <td class="py-2 px-4 border-b text-center" id="tableTeacherManageCourse"><span
@@ -263,6 +324,19 @@
                         </tr>
                         <tr>
                             <td class="py-2 px-4 border-b">Báo cáo tài liệu</td>
+                            <td class="py-2 px-4 border-b text-center"><span class="text-red-500"><i
+                                        class="fas fa-times"></i></span></td>
+                            <td class="py-2 px-4 border-b text-center"><span class="text-green-500"><i
+                                        class="fas fa-check"></i></span></td>
+                            <td class="py-2 px-4 border-b text-center"><span class="text-green-500"><i
+                                        class="fas fa-check"></i></span></td>
+                            <td class="py-2 px-4 border-b text-center" id="tableStudentReport"><span
+                                    class="text-green-500"><i class="fas fa-check"></i></span></td>
+                        </tr>
+                        <tr>
+                            <td class="py-2 px-4 border-b">Tải tài liệu xuống</td>
+                            <td class="py-2 px-4 border-b text-center"><span class="text-red-500"><i
+                                        class="fas fa-times"></i></span></td>
                             <td class="py-2 px-4 border-b text-center"><span class="text-green-500"><i
                                         class="fas fa-check"></i></span></td>
                             <td class="py-2 px-4 border-b text-center"><span class="text-green-500"><i
