--- a/src/admin/user-management.html
+++ b/src/admin/user-management.html
@@ -42,8 +42,11 @@
                 <a href="role-management.html" class="px-3 py-4 text-gray-500 hover:text-blue-600 font-medium">
                     <i class="fas fa-user-shield mr-2"></i>Phân quyền hệ thống
                 </a>
-                <a href="#" class="px-3 py-4 text-gray-500 hover:text-blue-600 font-medium">
+                <a href="document-management.html" class="px-3 py-4 text-gray-500 hover:text-blue-600 font-medium">
                     <i class="fas fa-book mr-2"></i>Quản lý tài liệu
+                </a>
+                <a href="cauhinh.html" class="px-3 py-4 text-gray-500 hover:text-blue-600 font-medium">
+                    <i class="fas fa-cog mr-2"></i>Cấu hình hệ thống
                 </a>
             </div>
         </div>
