--- a/src/admin/dashboard.html
+++ b/src/admin/dashboard.html
@@ -45,7 +45,7 @@
                 <a href="document-management.html" class="px-3 py-4 text-gray-500 hover:text-blue-600 font-medium">
                     <i class="fas fa-book mr-2"></i>Quản lý tài liệu
                 </a>
-                <a href="#" class="px-3 py-4 text-gray-500 hover:text-blue-600 font-medium">
+                <a href="cauhinh.html" class="px-3 py-4 text-gray-500 hover:text-blue-600 font-medium">
                     <i class="fas fa-cog mr-2"></i>Cấu hình hệ thống
                 </a>
             </div>
@@ -172,6 +172,20 @@
                         </a>
                     </div>
                     <div class="space-y-4">
+                        <div class="flex items-center justify-between p-3 bg-gray-50 rounded">
+                            <div>
+                                <p class="font-medium">Trưởng khoa</p>
+                                <p class="text-sm text-gray-500">Quyền xét duyệt tài liệu</p>
+                            </div>
+                            <div class="flex">
+                                <label class="relative inline-flex items-center cursor-pointer">
+                                    <input type="checkbox" id="teacherUploadPermission" class="sr-only peer" checked>
+                                    <div
+                                        class="w-11 h-6 bg-gray-200 peer-focus:outline-none rounded-full peer peer-checked:after:translate-x-full peer-checked:after:border-white after:content-[''] after:absolute after:top-[2px] after:left-[2px] after:bg-white after:border-gray-300 after:border after:rounded-full after:h-5 after:w-5 after:transition-all peer-checked:bg-blue-600">
+                                    </div>
+                                </label>
+                            </div>
+                        </div>
                         <div class="flex items-center justify-between p-3 bg-gray-50 rounded">
                             <div>
                                 <p class="font-medium">Giảng viên</p>
