--- a/src/admin/document-management.html
+++ b/src/admin/document-management.html
@@ -87,9 +87,9 @@
                         <tr>
                             <th class="py-2 px-4 border-b text-left">Tiêu đề</th>
                             <th class="py-2 px-4 border-b text-left">Người tải lên</th>
-                            <th class="py-2 px-4 border-b text-left">Ngày tải lên</th>
                             <th class="py-2 px-4 border-b text-left">Trạng thái</th>
-                            <th class="py-2 px-4 border-b text-left">Khóa học</th>
+                            <th class="py-2 px-4 border-b text-left">Ngày tải lên</th>
+                            <!-- <th class="py-2 px-4 border-b text-left">Khóa học</th> -->
                             <th class="py-2 px-4 border-b text-left">Hành động</th>
                         </tr>
                     </thead>
