--- a/src/index.html
+++ b/src/index.html
@@ -34,6 +34,7 @@
             <div class="bg-white p-6 rounded-lg shadow-md">
                 <h2 class="text-lg font-semibold mb-4">Tải lên tài liệu mới</h2>
                 <form id="uploadForm" enctype="multipart/form-data">
+                    <input type="hidden" id="contentHash" name="contentHash" value="">
                     <div class="mb-4">
                         <label class="block text-sm font-medium mb-2">Tiêu đề</label>
                         <input type="text" id="title" name="title" class="w-full p-2 border rounded" required>
