--- a/src/admin/cauhinh.html
+++ b/src/admin/cauhinh.html
@@ -36,7 +36,7 @@
                 <a href="dashboard.html" class="px-3 py-4 text-gray-500 hover:text-blue-600 font-medium">
                     <i class="fas fa-tachometer-alt mr-2"></i>Tổng quan
                 </a>
-                <a href="user-management.html"class="px-3 py-4 text-gray-500 hover:text-blue-600 font-medium" >
+                <a href="user-management.html" class="px-3 py-4 text-gray-500 hover:text-blue-600 font-medium">
                     <i class="fas fa-users mr-2"></i>Quản lý người dùng
                 </a>
                 <a href="role-management.html" class="px-3 py-4 text-gray-500 hover:text-blue-600 font-medium">
@@ -45,7 +45,7 @@
                 <a href="document-management.html" class="px-3 py-4 text-gray-500 hover:text-blue-600 font-medium">
                     <i class="fas fa-book mr-2"></i>Quản lý tài liệu
                 </a>
-                <a href="cauhinh.html"class="px-3 py-4 text-blue-600 border-b-2 border-blue-600 font-medium" >
+                <a href="cauhinh.html" class="px-3 py-4 text-blue-600 border-b-2 border-blue-600 font-medium">
                     <i class="fas fa-cog mr-2"></i>Cấu hình hệ thống
                 </a>
             </div>
@@ -56,24 +56,19 @@
         <!-- Status Message -->
         <div id="statusMessage" class="mb-4 hidden"></div>
 
-        <!-- User Management Interface -->
+        <!-- Department Management Interface -->
         <div class="bg-white rounded-lg shadow-md p-6 mb-6">
             <div class="flex justify-between items-center mb-6">
                 <h2 class="text-xl font-semibold">Danh sách Khoa</h2>
-                <div class="flex space-x-2">
-                    <input type="text" id="searchUser" placeholder="Tìm kiếm khoa..."
-                        class="border rounded px-3 py-2 focus:outline-none focus:ring-2 focus:ring-blue-500">
-                    <select id="filterRole"
-                        class="border rounded px-3 py-2 focus:outline-none focus:ring-2 focus:ring-blue-500">
-                        <option value="">Tất cả khoa</option>
-                        <option value="">Công nghệ thông tin</option>
-                        <option value="">Kinh tế hàng không</option>
-                        <option value="">Kinh tế</option>
-                        <option value="">Quản trị kinh doanh</option>
-                        <option value="">Ngôn ngữ Anh</option>
-                        <option value="">Du lịch</option>
-
-                    </select>
+                <div class="flex space-x-4">
+                    <div class="relative">
+                        <input type="text" id="searchUser" placeholder="Tìm kiếm khoa..." 
+                            class="w-64 border rounded-lg px-4 py-2 focus:outline-none focus:ring-2 focus:ring-blue-500">
+                        <i class="fas fa-search absolute right-3 top-3 text-gray-400"></i>
+                    </div>
+                    <button id="addDepartmentBtn" class="bg-blue-600 text-white px-4 py-2 rounded-lg hover:bg-blue-700 transition">
+                        <i class="fas fa-plus mr-2"></i>Thêm khoa mới
+                    </button>
                 </div>
             </div>
 
@@ -178,19 +173,20 @@
                         <option value="">Quản trị kinh doanh</option>
                         <option value="">Ngôn ngữ Anh</option>
                         <option value="">Du lịch</option>
-
                     </select>
                     <select id="filterRole"
-                    class="border rounded px-3 py-2 focus:outline-none focus:ring-2 focus:ring-blue-500">
-                    <option value="">Môn học</option>
-                    <option value="">Công nghệ thông tin</option>
-                    <option value="">Kinh tế hàng không</option>
-                    <option value="">Kinh tế</option>
-                    <option value="">Quản trị kinh doanh</option>
-                    <option value="">Ngôn ngữ Anh</option>
-                    <option value="">Du lịch</option>
-
-                </select>
+                        class="border rounded px-3 py-2 focus:outline-none focus:ring-2 focus:ring-blue-500">
+                        <option value="">Môn học</option>
+                        <option value="">Công nghệ thông tin</option>
+                        <option value="">Kinh tế hàng không</option>
+                        <option value="">Kinh tế</option>
+                        <option value="">Quản trị kinh doanh</option>
+                        <option value="">Ngôn ngữ Anh</option>
+                        <option value="">Du lịch</option>
+                    </select>
+                    <button id="addSubjectBtn" class="bg-blue-600 text-white px-4 py-2 rounded-lg hover:bg-blue-700 transition">
+                        <i class="fas fa-plus mr-2"></i>Thêm môn học mới
+                    </button>
                 </div>
             </div>
 
