--- a/src/admin/dashboard.html
+++ b/src/admin/dashboard.html
@@ -85,7 +85,7 @@
                         <i class="fas fa-graduation-cap text-xl"></i>
                     </div>
                     <div>
-                        <p class="text-gray-500 text-sm">Tổng số khóa học</p>
+                        <p class="text-gray-500 text-sm">Tổng các khoa</p>
                         <p class="text-2xl font-bold" id="totalCourses">--</p>
                     </div>
                 </div>
