--- a/src/admin/user-management.html
+++ b/src/admin/user-management.html
@@ -69,6 +69,8 @@
                         <option value="admin">Quản trị viên</option>
                         <option value="teacher">Giảng viên</option>
                         <option value="student">Học viên</option>
+                        <option value="dean">Trưởng khoa</option>
+
                     </select>
                 </div>
             </div>
@@ -125,6 +127,8 @@
                             <option value="admin">Quản trị viên</option>
                             <option value="teacher">Giảng viên</option>
                             <option value="student">Học viên</option>
+                            <option value="dean">Trưởng khoa</option>
+
                         </select>
                     </div>
 
