--- a/src/index.html
+++ b/src/index.html
@@ -76,7 +76,7 @@
                     </div>
                     <div class="mb-4">
                         <label class="block text-sm font-medium mb-2">Khoa </label>
-                        <select id="facultyId" class="w-full p-2 border rounded" name="facultyId">
+                        <select id="courseId" class="w-full p-2 border rounded" name="courseId">
                             <option value="">Không thuộc khoa nào</option>
                             <!-- Course options will be loaded dynamically -->
                         </select>
