--- a/src/login.html
+++ b/src/login.html
@@ -180,7 +180,7 @@
                             setTimeout(() => {
                                 // Kiểm tra vai trò để chuyển hướng phù hợp
                                 const user = JSON.parse(localStorage.getItem('userAuth'));
-                                if (user && user.role === 'admin') {
+                                if (user && user.role === 'admin' || user.role === 'dean' ) {
                                     window.location.href = redirectUrl || 'admin/dashboard.html';
                                 } else {
                                     window.location.href = redirectUrl || 'index.html';
@@ -329,7 +329,8 @@
             const roles = {
                 'admin': 'Quản trị viên',
                 'teacher': 'Giảng viên',
-                'student': 'Học viên'
+                'student': 'Học viên',
+                'dean': 'Trưởng khoa'
             };
 
             return roles[role] || role;
