--- a/src/register.html
+++ b/src/register.html
@@ -1,4 +1,4 @@
-z<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="vi">
 
 <head>
@@ -67,6 +67,7 @@ z<!DOCTYPE html>
                                     <select id="roleSelect" class="form-select">
                                         <option value="student">Học viên</option>
                                         <option value="teacher">Giảng viên</option>
+                                        <option value="dean">Trưởng khoa</option>
                                     </select>
                                 </div>
                                 
