--- a/src/admin/setting.html
+++ b/src/admin/setting.html
@@ -45,7 +45,7 @@
                 <a href="document-management.html" class="px-3 py-4 text-gray-500 hover:text-blue-600 font-medium">
                     <i class="fas fa-book mr-2"></i>Quản lý tài liệu
                 </a>
-                <a href="cauhinh.html" class="px-3 py-4 text-blue-600 border-b-2 border-blue-600 font-medium">
+                <a href="setting.html" class="px-3 py-4 text-blue-600 border-b-2 border-blue-600 font-medium">
                     <i class="fas fa-cog mr-2"></i>Cấu hình hệ thống
                 </a>
             </div>
@@ -109,6 +109,7 @@
                                     <option value="teacher">Giảng viên</option>
                                     <option value="student">Học viên</option>
                                     <option value="dean">Trưởng khoa</option>
+
                                 </select>
                            
                         </div>
@@ -119,6 +120,7 @@
                                 <option value="teacher">Giảng viên</option>
                                 <option value="student">Học viên</option>
                                 <option value="dean">Trưởng khoa</option>
+
                             </select>
                         </div>
                     </div>
