thêm trang student

--- a/src/admin/document-management.html
+++ b/src/admin/document-management.html
@@ -62,7 +62,7 @@
                         <option value="flagged">Đã gắn cờ</option>
                     </select>
                     <select id="filterCourse" class="border rounded px-3 py-2 focus:outline-none focus:ring-2 focus:ring-blue-500">
-                        <option value="">Tất cả khóa học</option>
+                        <option value="">Tất cả khóa</option>
                     </select>
                     <button id="addDocumentBtn" class="bg-green-500 hover:bg-green-600 text-white py-2 px-4 rounded admin-dean-only">
                         <a href="/"><i class="fas fa-plus mr-2"></i>Thêm tài liệu mới</a>
