--- a/src/student.html
+++ b/src/student.html
@@ -128,9 +128,9 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/web3/dist/web3.min.js"></script>
-    <script src="../js/role-permissions.js"></script>
-    <script src="../js/auth.js"></script>
-    <script src="../js/admin/document-management.js"></script>
+    <script src="js/role-permissions.js"></script>
+    <script src="js/auth.js"></script>
+    <script src="js/admin/document-management.js"></script>
     <script type="text/javascript">
         document.addEventListener('DOMContentLoaded', async function() {
             await AuthApp.init();
